--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,12 @@
+linux-meta (3.8.0.6.20) UNRELEASED; urgency=low
+
+  [ Stefan Bader ]
+
+  * control.common: update linux-crashdump dependencies switching us
+    to Debian's kdump-tools.
+
+ -- Andy Whitcroft <apw@canonical.com>  Fri, 15 Feb 2013 11:52:55 +0000
+
 linux-meta (3.8.0.6.19) raring; urgency=low
 
   * linux ABI 3.8.0-6
