--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.8.0-6.13) raring; urgency=low
+
+  * Version 3.8.0-6.13
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Thu, 14 Feb 2013 10:20:03 -0700
+
 linux-signed (3.8.0-6.11) raring; urgency=low
 
   * Version 3.8.0-6.11
