--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,11 @@
+linux-meta (3.5.0.25.31) quantal-proposed; urgency=low
+
+  [ Luis Henriques ]
+
+  * Bump ABI
+
+ -- Luis Henriques <luis.henriques@canonical.com>  Tue, 19 Feb 2013 09:56:42 +0000
+
 linux-meta (3.5.0.24.30) quantal-proposed; urgency=low
 
   [ Luis Henriques ]
