--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.5.0-25.38) precise; urgency=low
+
+  * Version 3.5.0-25.38
+
+ -- Luis Henriques <luis.henriques@canonical.com>  Tue, 19 Feb 2013 10:13:22 +0000
+
 linux-signed (3.5.0-24.37) precise; urgency=low
 
   * Version 3.5.0-24.37
