--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.8.0-7.14) raring; urgency=low
+
+  * Version 3.8.0-7.14
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Tue, 19 Feb 2013 08:49:33 -0700
+
 linux-signed (3.8.0-6.13) raring; urgency=low
 
   * Version 3.8.0-6.13
