--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (3.8.0.7.21) raring; urgency=low
+
+  * linux ABI 3.8.0-7
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Tue, 19 Feb 2013 08:51:50 -0700
+
 linux-meta (3.8.0.6.20) raring; urgency=low
 
   [ Stefan Bader ]
