--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-lts-quantal (3.5.0.25.32) precise-proposed; urgency=low
+
+  * Ubuntu-lts-3.5.0-25.38
+
+ -- Luis Henriques <luis.henriques@canonical.com>  Wed, 20 Feb 2013 09:50:29 +0000
+
 linux-meta-lts-quantal (3.5.0.24.31) precise-proposed; urgency=low
 
   * Ubuntu-lts-3.5.0-24.37
