--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-ti-omap4 (3.5.0.220.21) quantal-proposed; urgency=low
+
+  * Ubuntu-3.5.0-220.28
+
+ -- Herton Ronaldo Krzesinski <herton.krzesinski@canonical.com>  Wed, 20 Feb 2013 19:40:08 -0300
+
 linux-meta-ti-omap4 (3.5.0.219.20) quantal-proposed; urgency=low
 
   * Ubuntu-3.5.0-219.27
