--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.8.0-7.15) raring; urgency=low
+
+  * Version 3.8.0-7.15
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Thu, 21 Feb 2013 13:04:03 -0700
+
 linux-signed (3.8.0-7.14) raring; urgency=low
 
   * Version 3.8.0-7.14
