--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.5.0-25.39) precise; urgency=low
+
+  * Version 3.5.0-25.39
+
+ -- Brad Figg <brad.figg@canonical.com>  Mon, 25 Feb 2013 11:12:30 -0800
+
 linux-signed (3.5.0-25.38) precise; urgency=low
 
   * Version 3.5.0-25.38
