--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,11 @@
+linux-meta (3.5.0.26.32) quantal-proposed; urgency=low
+
+  [ Brad Figg ]
+
+  * Bump ABI
+
+ -- Brad Figg <brad.figg@canonical.com>  Tue, 26 Feb 2013 09:09:33 -0800
+
 linux-meta (3.5.0.25.31) quantal-proposed; urgency=low
 
   [ Luis Henriques ]
