--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (3.8.0.8.22) raring; urgency=low
+
+  * linux ABI 3.8.0-8 
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Tue, 26 Feb 2013 13:27:13 -0700
+
 linux-meta (3.8.0.7.21) raring; urgency=low
 
   * linux ABI 3.8.0-7
