--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (3.8.0.24.40) raring-proposed; urgency=low
+
+  * linux ABI 3.8.0-24
+
+ -- Steve Conklin <sconklin@canonical.com>  Fri, 31 May 2013 08:11:05 -0500
+
 linux-meta (3.8.0.23.39) raring-proposed; urgency=low
 
   * linux ABI 3.8.0-23
