--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+linux-backports-modules-3.5.0 (3.5.0-33.21) quantal; urgency=low
+
+  [ Steve Conklin ]
+
+  * Bump ABI for Quantal 3.5.0-33.54
+
+ -- Steve Conklin <sconklin@canonical.com>  Fri, 31 May 2013 10:26:52 -0500
+
 linux-backports-modules-3.5.0 (3.5.0-32.20) quantal-proposed; urgency=low
 
   [ Steve Conklin ]
