--- a/debian/changelog
+++ b/debian/changelog
@@ -1,22 +1,28 @@
-linux-signed (3.5.0-32.53) precise; urgency=low
+linux-signed (3.5.0-33.54) quantal; urgency=low
+
+  * Version 3.5.0-33.54
+
+ -- Steve Conklin <sconklin@canonical.com>  Fri, 31 May 2013 10:37:51 -0500
+
+linux-signed (3.5.0-32.53) quantal; urgency=low
 
   * Version 3.5.0-32.53
 
  -- Steve Conklin <sconklin@canonical.com>  Tue, 28 May 2013 15:59:13 -0500
 
-linux-signed (3.5.0-31.52) precise; urgency=low
+linux-signed (3.5.0-31.52) quantal; urgency=low
 
   * Version 3.5.0-31.52
 
  -- Brad Figg <brad.figg@canonical.com>  Thu, 16 May 2013 08:49:26 -0700
 
-linux-signed (3.5.0-30.51) precise; urgency=low
+linux-signed (3.5.0-30.51) quantal; urgency=low
 
   * Version 3.5.0-30.51
 
  -- Steve Conklin <sconklin@canonical.com>  Tue, 14 May 2013 13:28:57 -0500
 
-linux-signed (3.5.0-29.50) precise; urgency=low
+linux-signed (3.5.0-29.50) quantal; urgency=low
 
   * Version 3.5.0-29.50
 
@@ -34,67 +40,67 @@ linux-signed (3.5.0-28.48) quantal-proposed; urgency=low
 
  -- Brad Figg <brad.figg@canonical.com>  Wed, 24 Apr 2013 06:55:49 -0700
 
-linux-signed (3.5.0-28.47) precise; urgency=low
+linux-signed (3.5.0-28.47) quantal; urgency=low
 
   * Version 3.5.0-28.47
 
  -- Steve Conklin <sconklin@canonical.com>  Tue, 09 Apr 2013 13:55:59 -0500
 
-linux-signed (3.5.0-27.46) precise; urgency=low
+linux-signed (3.5.0-27.46) quantal; urgency=low
 
   * Version 3.5.0-27.46
 
  -- Steve Conklin <sconklin@canonical.com>  Mon, 25 Mar 2013 14:59:50 -0500
 
-linux-signed (3.5.0-27.45) precise; urgency=low
+linux-signed (3.5.0-27.45) quantal; urgency=low
 
   * Version 3.5.0-27.45
 
  -- Steve Conklin <sconklin@canonical.com>  Tue, 19 Mar 2013 18:13:40 -0500
 
-linux-signed (3.5.0-27.43) precise; urgency=low
+linux-signed (3.5.0-27.43) quantal; urgency=low
 
   * Version 3.5.0-27.43
 
  -- Steve Conklin <sconklin@canonical.com>  Tue, 19 Mar 2013 09:42:57 -0500
 
-linux-signed (3.5.0-26.40) precise; urgency=low
+linux-signed (3.5.0-26.40) quantal; urgency=low
 
   * Version 3.5.0-26.40
 
  -- Brad Figg <brad.figg@canonical.com>  Tue, 26 Feb 2013 11:08:50 -0800
 
-linux-signed (3.5.0-25.39) precise; urgency=low
+linux-signed (3.5.0-25.39) quantal; urgency=low
 
   * Version 3.5.0-25.39
 
  -- Brad Figg <brad.figg@canonical.com>  Mon, 25 Feb 2013 11:12:30 -0800
 
-linux-signed (3.5.0-25.38) precise; urgency=low
+linux-signed (3.5.0-25.38) quantal; urgency=low
 
   * Version 3.5.0-25.38
 
  -- Luis Henriques <luis.henriques@canonical.com>  Tue, 19 Feb 2013 10:13:22 +0000
 
-linux-signed (3.5.0-24.37) precise; urgency=low
+linux-signed (3.5.0-24.37) quantal; urgency=low
 
   * Version 3.5.0-24.37
 
  -- Luis Henriques <luis.henriques@canonical.com>  Wed, 06 Feb 2013 18:06:25 +0000
 
-linux-signed (3.5.0-24.36) precise; urgency=low
+linux-signed (3.5.0-24.36) quantal; urgency=low
 
   * Version 3.5.0-24.36
 
  -- Luis Henriques <luis.henriques@canonical.com>  Wed, 06 Feb 2013 11:18:22 +0000
 
-linux-signed (3.5.0-23.35) precise; urgency=low
+linux-signed (3.5.0-23.35) quantal; urgency=low
 
   * Version 3.5.0-23.35
 
  -- Luis Henriques <luis.henriques@canonical.com>  Thu, 24 Jan 2013 12:33:25 +0000
 
-linux-signed (3.5.0-22.34) precise; urgency=low
+linux-signed (3.5.0-22.34) quantal; urgency=low
 
   * Version 3.5.0-22.34
 
