--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,11 @@
+linux-meta (3.2.0.46.55) precise; urgency=low
+
+  [ Steve Conklin ]
+
+  * Bump ABI
+
+ -- Steve Conklin <sconklin@canonical.com>  Fri, 31 May 2013 11:23:49 -0500
+
 linux-meta (3.2.0.45.54) precise; urgency=low
 
   [ Steve Conklin ]
