--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+linux-backports-modules-3.2.0 (3.2.0-45.34) precise; urgency=low
+
+  [ Steve Conklin ]
+
+  * Bump ABI for Precise 3.2.0-46.71
+
+ -- Steve Conklin <sconklin@canonical.com>  Fri, 31 May 2013 11:42:58 -0500
+
 linux-backports-modules-3.2.0 (3.2.0-45.33) precise-proposed; urgency=low
 
   [ Steve Conklin ]
