--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,11 @@
+linux-meta (2.6.32.48.55) lucid; urgency=low
+
+  [ Steve Conklin ]
+
+  * Bump ABI
+
+ -- Steve Conklin <sconklin@canonical.com>  Fri, 31 May 2013 13:29:05 -0500
+
 linux-meta (2.6.32.47.54) lucid-proposed; urgency=low
 
   [ Brad Figg ]
