--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-backports-modules-2.6.32 (2.6.32-48.50) lucid; urgency=low
+
+  * Start new release (and bump ABI)
+
+ -- Steve Conklin <sconklin@canonical.com>  Fri, 31 May 2013 13:33:27 -0500
+
 linux-backports-modules-2.6.32 (2.6.32-47.49) lucid-proposed; urgency=low
 
   * Start new release (and bump ABI)
