--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+linux-backports-modules-3.2.0 (3.2.0-47.35) precise; urgency=low
+
+  [ Steve Conklin ]
+
+  * Bump ABI for Precise 3.2.0-47.72
+
+ -- Steve Conklin <sconklin@canonical.com>  Mon, 03 Jun 2013 12:55:23 -0500
+
 linux-backports-modules-3.2.0 (3.2.0-45.34) precise; urgency=low
 
   [ Steve Conklin ]
