--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-lts-raring (3.8.0.24.23) precise; urgency=low
+
+  * Ubuntu-lts-3.8.0-24.35
+
+ -- Steve Conklin <sconklin@canonical.com>  Mon, 03 Jun 2013 15:18:11 -0500
+
 linux-meta-lts-raring (3.8.0.23.22) precise; urgency=low
 
   * Ubuntu-lts-3.8.0-23.34
