--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.9.0-4.9) saucy; urgency=low
+
+  * Version 3.9.0-4.9
+
+ -- Andy Whitcroft <apw@canonical.com>  Wed, 05 Jun 2013 15:31:21 +0100
+
 linux-signed (3.9.0-3.8) saucy; urgency=low
 
   * Version 3.9.0-3.8
