--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (3.9.0.4.5) saucy; urgency=low
+
+  * linux ABI 3.9.0-4
+
+ -- Andy Whitcroft <apw@canonical.com>  Wed, 05 Jun 2013 15:48:54 +0100
+
 linux-meta (3.9.0.3.4) saucy; urgency=low
 
   * linux ABI 3.9.0-3
