--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (3.8.0.25.41) raring-proposed; urgency=low
+
+  * linux ABI 3.8.0-25
+
+ -- Steve Conklin <sconklin@canonical.com>  Fri, 05 Jun 2013 13:13:07 -0500
+
 linux-meta (3.8.0.24.40) raring-proposed; urgency=low
 
   * linux ABI 3.8.0-24
