--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-lts-quantal (3.5.0.34.41) precise; urgency=low
+
+  * Ubuntu-lts-3.5.0-34.55
+
+ -- Steve Conklin <sconklin@canonical.com>  Fri, 07 Jun 2013 10:09:01 -0500
+
 linux-meta-lts-quantal (3.5.0.33.40) precise; urgency=low
 
   * Ubuntu-lts-3.5.0-33.54
