--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-lts-raring (3.8.0.25.24) precise; urgency=low
+
+  * Ubuntu-lts-3.8.0-25.37
+
+ -- Steve Conklin <sconklin@canonical.com>  Fri, 07 Jun 2013 11:06:15 -0500
+
 linux-meta-lts-raring (3.8.0.24.23) precise; urgency=low
 
   * Ubuntu-lts-3.8.0-24.35
