--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-ti-omap4 (3.2.0.1433.32) precise; urgency=low
+
+  * linux-ti-omap4 ABI 3.2.0-1433
+
+ -- Brad Figg <brad.figg@canonical.com>  Fri, 07 Jun 2013 11:26:38 -0700
+
 linux-meta-ti-omap4 (3.2.0.1432.31) precise-proposed; urgency=low
 
   * linux-ti-omap4 ABI 3.2.0-1432
