--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-ti-omap4 (3.5.0.226.26) quantal; urgency=low
+
+  * Ubuntu-3.5.0-226.38
+
+ -- Brad Figg <brad.figg@canonical.com>  Fri, 07 Jun 2013 11:31:38 -0700
+
 linux-meta-ti-omap4 (3.5.0.225.25) quantal-proposed; urgency=low
 
   * Ubuntu-3.5.0-224.36
