UBUNTU: Ubuntu-maguro-3.0.0.2.3
Signed-off-by: Tim Gardner <tim.gardner@canonical.com>

--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,10 @@
+linux-meta-maguro (3.0.0.2.3) saucy; urgency=low
+
+  * ABI: 3.0.0-2
+  * Added linux-maguro-tools meta package 
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Mon, 10 Jun 2013 12:36:37 -0600
+
 linux-meta-maguro (3.0.0.1.2) saucy; urgency=low
 
   * ABI: 3.0.0-1
