--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (3.9.0.5.6) saucy; urgency=low
+
+  * linux ABI 3.9.0-5
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Tue, 11 Jun 2013 08:37:33 -0600
+
 linux-meta (3.9.0.4.5) saucy; urgency=low
 
   * linux ABI 3.9.0-4
