--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.9.0-5.10) saucy; urgency=low
+
+  * Version 3.9.0-5.10
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Tue, 11 Jun 2013 08:39:38 -0600
+
 linux-signed (3.9.0-4.9) saucy; urgency=low
 
   * Version 3.9.0-4.9
