--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-grouper (3.1.10.4.5) saucy; urgency=low
+
+  * ABI: 3.1.10-4
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Tue, 11 Jun 2013 11:56:11 -0600
+
 linux-meta-grouper (3.1.10.3.4) saucy; urgency=low
 
   * Added linux-grouper-tools meta package
