--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-lts-saucy (3.9.0.5.4) precise; urgency=low
+
+  * Ubuntu-lts-3.9.0-5.11 
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Tue, 11 Jun 2013 14:19:17 -0600
+
 linux-meta-lts-saucy (3.9.0.3.3) precise; urgency=low
 
   * Ubuntu-lts-3.9.0-3.8
