UBUNTU: Ubuntu-mako-3.4.0.2.4
Signed-off-by: Tim Gardner <tim.gardner@canonical.com>

--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,10 @@
+linux-meta-mako (3.4.0.2.4) saucy; urgency=low
+
+  * UBUNTU: Added linux-grouper-tools
+  * ABI Ubuntu-3.4.0-2 
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Thu, 13 Jun 2013 13:42:40 -0600
+
 linux-meta-mako (3.4.0.1.3) saucy; urgency=low
 
   * Switch naming to mako.
