--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.9.0-6.13) saucy; urgency=low
+
+  * Version 3.9.0-6.13
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Fri, 14 Jun 2013 09:46:26 -0600
+
 linux-signed (3.9.0-5.11) saucy; urgency=low
 
   * Version 3.9.0-5.11
