--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-lts-saucy (3.9.0.6.5) precise; urgency=low
+
+  * Ubuntu-lts-3.9.0-6
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Fri, 14 Jun 2013 10:19:31 -0600
+
 linux-meta-lts-saucy (3.9.0.5.4) precise; urgency=low
 
   * Ubuntu-lts-3.9.0-5.11 
