UBUNTU: Ubuntu-mako-3.4.0.3.5
Signed-off-by: Tim Gardner <tim.gardner@canonical.com>

--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-mako (3.4.0.3.5) saucy; urgency=low
+
+  * ABI Ubuntu-3.4.0-3
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Mon, 17 Jun 2013 12:50:31 -0600
+
 linux-meta-mako (3.4.0.2.4) saucy; urgency=low
 
   * UBUNTU: Added linux-grouper-tools
