--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-grouper (3.1.10.5.6) saucy; urgency=low
+
+  * ABI: 3.1.10-5
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Mon, 17 Jun 2013 13:23:16 -0600
+
 linux-meta-grouper (3.1.10.4.5) saucy; urgency=low
 
   * ABI: 3.1.10-4
