--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-maguro (3.0.0.3.5) saucy; urgency=low
+
+  * ABI: 3.0.0-3
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Mon, 17 Jun 2013 14:19:43 -0600
+
 linux-meta-maguro (3.0.0.2.4) saucy; urgency=low
 
   * Fix cut and paste error
