--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+linux-backports-modules-3.5.0 (3.5.0-35.24) quantal; urgency=low
+
+  [ Steve Conklin ]
+
+  * Bump ABI for Quantal 3.5.0-35.56
+
+ -- Steve Conklin <sconklin@canonical.com>  Tue, 18 Jun 2013 11:07:40 -0500
+
 linux-backports-modules-3.5.0 (3.5.0-34.23) quantal; urgency=low
 
   [ Steve Conklin ]
