--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+linux-backports-modules-3.2.0 (3.2.0-49.37) precise; urgency=low
+
+  [ Steve Conklin ]
+
+  * Bump ABI for Precise 3.2.0-49.75
+
+ -- Steve Conklin <sconklin@canonical.com>  Tue, 18 Jun 2013 12:50:01 -0500
+
 linux-backports-modules-3.2.0 (3.2.0-48.36) precise; urgency=low
 
   [ Steve Conklin ]
